--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ abc_view_pc_set(c(0, 4, 7))
 Displaying a chord of MIDI pitches:
 
 ```r
-abc_view_midi_chord(c(60, 64, 67))
+abc_view_midi_chord_seq(list(c(48, 64, 67), c(47, 62, 67), c(48, 64, 67)))
 ```
 
 Displaying a pitch-class set within an R markdown file:
