--- a/README.Rmd
+++ b/README.Rmd
@@ -14,13 +14,24 @@ knitr::opts_chunk$set(
 
 [![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 
-*abcR* is a wrapper for the *[abcjs](https://abcjs.net/])* javascript library.
+This package provides utility functions for rendering music 
+notation in interactive R sessions. In RStudio, the rendered notation 
+appears in the Viewer pane. These functions are intended to help music 
+researchers to visualise music objects created during their programming 
+tasks. The current focus is on displaying chord sequences, 
+but better support may later be added for melodies.
+Music notation is rendered using the abcjs package (https://abcjs.net),
+which was written by Paul Rosen and Gregory Dyke,
+and released under the MIT license.
 
-## Status
+## Authors
 
-*abcR* is currently in alpha and hence its functionality and interface
-are subject to change.
-The package still needs to be documented.
+- *abcR*: Peter M. C. Harrison
+- *absjs*: Paul Rosen and Gregory Dyke
+
+## License
+
+Both *abcR* and *abcjs* are released under the MIT license.
 
 ## Installation
 
@@ -34,15 +45,15 @@ devtools::install_github("pmcharrison/abcR")
 
 ## Example usage
 
-Note: 
-Github doesn't allow README files to contain Javascript,
-so examples can't be shown directly here.
-
-Displaying a pitch-class set within RStudio:
+Displaying a chord within RStudio:
 
 ```r
 library(abcR)
-view_pc_set(c(0, 4, 7))
+view_pi_chord(c(60, 64, 67))
+```
+
+```{r, out.width = '20%', echo = FALSE}
+knitr::include_graphics("man/figures/example-chord.png")
 ```
 
 Displaying a chord sequence (pitches are given in MIDI note numbers):
@@ -51,24 +62,16 @@ Displaying a chord sequence (pitches are given in MIDI note numbers):
 view_pi_chord_seq(list(c(48, 64, 67), c(47, 62, 67), c(48, 64, 67)))
 ```
 
-Displaying a pitch-class set within an R markdown file:
-
-```r
-html_from_pc_set(c(0, 4, 9))
+```{r, out.width = '35%', echo = FALSE}
+knitr::include_graphics("man/figures/example-pi-chord-seq.png")
 ```
 
-Displaying an *abc* file:
+Displaying a full *abc* file:
 
 ```r
-html_from_abc_file(system.file("examples/example-song.abc",
-                               package = "abcR"))
+view_abc_file(system.file("examples/example-song.abc", package = "abcR"))
 ```
 
-## Authors
-
-- *abcR*: Peter M. C. Harrison
-- *absjs*: Paul Rosen and Gregory Dyke
-
-## License
-
-Both *abcR* and *abcjs* are released under the MIT license.
+```{r, echo = FALSE}
+knitr::include_graphics("man/figures/example-song.png")
+```
